[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Data Pipleline for Loop Takehome Task"
authors = ["Adem Mohammed <abulhuman.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.1"
tqdm = "^4.66.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
